--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ importMethodsFrom(CGHbase, bpend, bpstart, calls, "calls<-", chromosomes,
     copynumber, "copynumber<-", frequencyPlot, plot, probamp, "probamp<-",
     probdloss, "probdloss<-", probgain, "probgain<-", probloss, "probloss<-",
     probnorm, "probnorm<-", segmented, "segmented<-", "regions", "regions<-")
-importMethodsFrom(matrixStats, colMedians)
 importMethodsFrom(methods, coerce, initialize, show)
 importMethodsFrom(Rsamtools, scanBam, ScanBamParam, scanBamHeader)
 
@@ -23,11 +22,11 @@ importFrom(CGHcall, CGHcall, ExpandCGHcall, postsegnormalize)
 importFrom(DNAcopy, CNA, segment, smooth.CNA, segments.summary)
 importFrom(graphics, abline, axis, axTicks, box, contour, image, mtext, par,
     points, rect, segments, text)
-importFrom(matrixStats, binCounts, madDiff, sdDiff, rowMedians)
+importFrom(matrixStats, binCounts, madDiff, sdDiff, rowMedians, colMedians)
 importFrom(methods, callNextMethod, new)
 importFrom(R.utils, downloadFile)
 importFrom(Rsamtools, scanBamFlag)
-importFrom(stats, aggregate, approxfun, density, lm, loess, median, predict)
+importFrom(stats, aggregate, approxfun, density, formula, lm, loess, median, predict)
 importFrom(utils, data, maintainer, packageVersion, read.table, write.table)
 importFrom(GenomicRanges, GRanges)
 importFrom(IRanges, IRanges)
